--- a/src/app/modules/user-management/components/home/home.component.html
+++ b/src/app/modules/user-management/components/home/home.component.html
@@ -82,128 +82,128 @@
 
 
 
-  <div class=" container  shadow-lg p-3 mb-5 bg-body rounded">
-    <div class="main_container full_width jds-container btn-revamp">
-      <div class="l-breakpoint--desktop">
-        <span class="sp--l pd--top j-Space__vertical j-Space"></span>
-      </div>
-      <div class="l-breakpoint--tablet">
-        <span class="sp--xs pd--top j-Space__vertical j-Space"></span>
-      </div>
+<div class=" container  shadow-lg p-3 mb-5 bg-body rounded">
+  <div class="main_container full_width jds-container btn-revamp">
+    <div class="l-breakpoint--desktop">
+      <span class="sp--l pd--top j-Space__vertical j-Space"></span>
+    </div>
+    <div class="l-breakpoint--tablet">
+      <span class="sp--xs pd--top j-Space__vertical j-Space"></span>
+    </div>
 
-      <div class="l-layout--max-width overflow-scroll-max-width">
-        
-        <div
-          class="j-card j-content-layout card-horizontal-dektop size--s card-vertical maskhead-card no-top-padding no-bottom-padding j-card__shadow l-radius--xl cursor-pointer"
-        >
-          <div data-mode="bold" class="j-card__flex j-flex-column-reverse">
-            <div class="j-card__content j-relative w-100 h100-l">
-              <div class="j-card__ramdo bg--primary-background"></div>
-              <div
-                class="j-contentBlock j-contentBlock__size-s j-relative h100-l"
-              >
-                <div class="j-contentBlock__body h100-l">
-                  <div
-                    class="j-contentBlock__content pd--bottom pd--top-l sp--m"
-                  >
-                    <h4
-                      class="j-contentBlock__title j-text-heading-l j-color-primary-grey-100 "
-                    >
-                      10,000+ movies and much more.
-                    </h4>
-                  </div>
+    <div class="l-layout--max-width overflow-scroll-max-width mb-5">
+
+      <div
+        class="j-card j-content-layout card-horizontal-dektop size--s card-vertical maskhead-card no-top-padding no-bottom-padding j-card__shadow l-radius--xl">
+        <div data-mode="bold" class="j-card__flex j-flex-column-reverse">
+          <div class="j-card__content j-relative w-100 h100-l">
+            <div class="j-card__ramdo bg--primary-background"></div>
+            <div class="j-contentBlock j-contentBlock__size-s j-relative h100-l">
+              <div class="j-contentBlock__body h100-l">
+                <div class="j-contentBlock__content pd--bottom pd--top-l sp--m">
+                  <h4 class="j-contentBlock__title j-text-heading-l j-color-primary-grey-100 ">
+                    10,000+ movies and much more.
+                  </h4>
                 </div>
               </div>
-            </div>
-            
-
-            <div
-              class="j-card__image no-radius l-breakpoint--desktop"
-              style="
-                --aspect-ratio: var(--aspect-ratio-landscape);
-                --image-focus: top;
-              "
-            >
-            </div>
-
-            <div
-              class="j-card__image no-radius l-breakpoint--tablet w-100"
-              style="--image-focus: top"
-            >
-         
             </div>
           </div>
+
+
+          <div class="j-card__image no-radius l-breakpoint--desktop"
+            style=" --aspect-ratio: var(--aspect-ratio-landscape);--image-focus: top;"></div>
+          <div class="j-card__image no-radius l-breakpoint--tablet w-100" style="--image-focus: top"></div>
         </div>
       </div>
+    </div>
 
-      <div class="l-breakpoint--desktop">
-        <span class="sp--xxl pd--top j-Space__vertical j-Space"></span>
-      </div>
-      <div class="l-breakpoint--tablet">
-        <span class="sp--l pd--top j-Space__vertical j-Space"></span>
-      </div>
 
-      <section class="j-container">
-        <div class="l-layout--max-width">
-          <section class="j-container l-layout--max-width-narrow">
-            <div
-              class="l-align-center sm-align-left j-contentBlock j-contentBlock__size-m"
-            >
-              <div
-                class="j-contentBlock__caption l-layout--centered sm-layout--left"
-              >
-                <div class="j-listBlock align-middle">
-                  <div class="j-listBlock__main">
-                    <div class="j-listBlock__prefix">
-                      <span
-                        class="j-icon"
-                        style="
+
+    <section class="j-container">
+      <div class="l-layout--max-width">
+        <section class="j-container l-layout--max-width-narrow">
+          <div class="l-align-center sm-align-left j-contentBlock j-contentBlock__size-m">
+            <div class="j-contentBlock__caption l-layout--centered sm-layout--left">
+              <div class="j-listBlock align-middle">
+                <div class="j-listBlock__main">
+                  <div class="j-listBlock__prefix">
+                    <span class="j-icon" style="
                           --icon-size-svg: 100%;
                           --icon-size: var(--spacing-l);
-                        "
-                      >
-                        <img
-                          src="https://jep-asset.akamaized.net/jio/svg/logo/jiocinema-n.svg"
-                          alt="JioCinema"
-                          class="l-radius--large overflow-initial"
-                          loading="lazy"
-                        />
-                      </span>
-                    </div>
-                    <div
-                      class="j-contentBlock__title j-heading j-text-heading-xs"
-                    >
-                      JioCinema
-                    </div>
+                        ">
+                      <img src="https://jep-asset.akamaized.net/jio/svg/logo/jiocinema-n.svg" alt="JioCinema"
+                        class="l-radius--large overflow-initial" loading="lazy" />
+                    </span>
+                  </div>
+                  <div class="j-contentBlock__title j-heading j-text-heading-xs">
+                    JioCinema
                   </div>
                 </div>
               </div>
+            </div>
 
-              <div class="j-contentBlock__body">
-                <div class="j-contentBlock__content">
-                  <!-- <br class="l-breakpoint--widescreen"> -->
-                  <h3 class="j-contentBlock__title j-heading j-text-heading-l">
-                    Watch wherever with the Cinema app.
-                  </h3>
+            <div class="j-contentBlock__body">
+              <div class="j-contentBlock__content">
+                <!-- <br class="l-breakpoint--widescreen"> -->
+                <h3 class="j-contentBlock__title j-heading j-text-heading-l">
+                  Watch wherever with the Cinema app.
+                </h3>
+                <p class="j-contentBlock__description j-text-body-m j-color-primary-grey-80">
+                  Carry 10.000+ movies series, 700+ shows and more in<br class="l-breakpoint--widescreen" />
+                  you pocket with the JioCinema app or the MyJio app.
+                </p>
+              </div>
 
-                  <p
-                    class="j-contentBlock__description j-text-body-m j-color-primary-grey-80"
-                  >
-                    Carry 10.000+ movies series, 700+ shows and more in<br
-                      class="l-breakpoint--widescreen"
-                    />
-                    you pocket with the JioCinema app or the MyJio app.
-                  </p>
-                </div>
-
-                <div class="j-button-group">
-                  <a class="btn btn-primary m-3" routerLink="/createaccount" routerLinkActive="activebutton">Join Now</a>
-                </div>
+              <div class="j-button-group">
+                <a class="btn btn-primary m-3" routerLink="/createaccount" routerLinkActive="activebutton">Join Now</a>
               </div>
             </div>
-          </section>
-        </div>
-      </section>
+          </div>
+        </section>
+      </div>
+    </section>
+  </div>
+  <div class="grid-flex p-5">
+    <div class="col col-image" style="background-image: url(https://www.jio.com/imagejcsec1-min.png);">
+    </div>
+    <div class="col col-text">
+      <div class="Aligner-item">
+        <h3 class="text-center">
+          Bringing you entertainment across 11 languages
+        </h3>
+        <h5 class="text-center">Watch your favourite Movies, TV Shows, Originals, Music Videos with subtitles and in the
+          audio language of your choice.</h5>
+      </div>
     </div>
   </div>
 
+  <div class="grid-flex p-5">
+    <div class="col col-image" style="background-image: url(https://www.jio.com/image-3jc2d-min.png);">
+      &nbsp;
+    </div>
+    <div class="col col-text col-left">
+      <div class="Aligner-item">
+        <h3 class="text-center">
+          Experience entertainment in all screen sizes
+        </h3>
+        <h5 class="text-center">Watch Movies, TV Shows & Web Series at the tap of a button on the device of your choice
+        </h5>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid-flex p-5">
+    <div class="col col-image" style="background-image: url(https://www.jio.com/image-2jcd4.png);">
+      &nbsp;
+    </div>
+    <div class="col col-text">
+      <div class="Aligner-item">
+        <h3 class="text-center">
+          Download & watch your favorite movies and TV shows offline to stream anytime anywhere
+        </h3>
+        <h5 class="text-center">10,000+ Movies Online | 700+ TV Shows & Web Series | 70,000+ Music Videos
+        </h5>
+      </div>
+    </div>
+  </div>
+</div>
