--- a/src/app/modules/user-management/components/header/header.component.html
+++ b/src/app/modules/user-management/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid ">
+<div class="container-fluid  ">
     <div class="shadow-lg p-3 mb-5 bg-body rounded">
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
@@ -31,7 +31,9 @@
          
           <form class="d-flex">
             <!-- <i class="login__icon fas fa-user"></i> -->
-            <a class="btn btn-primary m-3 " routerLink="/login" routerLinkActive="activebutton">Login</a>
+            <input class="form-control me-2 rounded-pill" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-success me-3 rounded-pill" type="submit">Search</button>
+            <a class="btn btn-primary p-2 text-light fst-italic fw-bold ps-4 pe-4 rounded " routerLink="/login" routerLinkActive="activebutton">Login</a>
           </form>
         </div>
       </nav>
