--- a/src/app/modules/user-management/components/sign-in/sign-in.component.html
+++ b/src/app/modules/user-management/components/sign-in/sign-in.component.html
@@ -39,8 +39,10 @@
           </div>
 
           <div class="d-flex justify-content-between align-items-center">
-          
-            <a href="" class="text-body">Forgot password?</a>
+            <a class="text-body" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              Forgot password?
+            </a>
+        
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
@@ -54,3 +56,47 @@
       </div>
     </div>
   </div>
+
+
+  <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Reset Password</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-12">
+          <label for="inputEmail" class="form-label">Email</label>
+          <input [(ngModel)]="email"  [ngModelOptions]="{standalone: true}" type="email" class="form-control" placeholder="john@example.com" >
+        </div>
+        <div class="col-md-12">
+          <label for="Question" class="form-label">Security  Question</label>
+          <select [(ngModel)]="question" [ngModelOptions]="{standalone: true}" class="form-control "  >
+            <option value = "" selected="selected" >-- Select Question --</option>
+            <option *ngFor="let q of questions" [value]="q.id">
+              {{q.question}}
+             </option> 
+          </select>
+        </div>
+        <div class="col-md-12">
+          <label for="inputPassword4" class="form-label">Your Answer</label>
+          <input [(ngModel)]="answer"  [ngModelOptions]="{standalone: true}" type="test" class="form-control" placeholder="Answer" >
+        </div>
+        <div class="form-outline mb-3">
+          <label for="inputPassword4" class="form-label">New Password</label>
+          <input type="password" [(ngModel)]="password"  [ngModelOptions]="{standalone: true}" class="form-control  form-control-lg"  placeholder="************">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="reset()">Reset Password</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
