role-base-auth-done

--- a/src/app/modules/user-management/components/header/header.component.html
+++ b/src/app/modules/user-management/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid  ">
+<div class="container-fluid "  data-mdb-sticky-direction="up" >
     <div class="shadow-lg p-3 mb-5 bg-body rounded">
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
