--- a/src/app/modules/user-management/components/sign-in/sign-in.component.html
+++ b/src/app/modules/user-management/components/sign-in/sign-in.component.html
@@ -29,13 +29,13 @@
           <!-- Email input -->
           <div class="form-outline mb-4">
             <label for="inputEmail4" class="form-label">Email</label>
-            <input type="email" [(ngModel)]="email"  [ngModelOptions]="{standalone: true}" class="form-control form-control-lg"  placeholder="john@example.com">
+            <input type="email" [(ngModel)]="email"  [ngModelOptions]="{standalone: true}" class="form-control form-control-lg"  placeholder="john@example.com" required>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-3">
             <label for="inputPassword4" class="form-label">Password</label>
-            <input type="password" [(ngModel)]="password"  [ngModelOptions]="{standalone: true}" class="form-control  form-control-lg"  placeholder="************">
+            <input type="password" [(ngModel)]="password"  [ngModelOptions]="{standalone: true}" class="form-control  form-control-lg"  placeholder="************" required>
           </div>
 
           <div class="d-flex justify-content-between align-items-center">
@@ -46,7 +46,7 @@
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
-            <button type="button" class="btn btn-primary btn-lg"
+            <button type="submit" class="btn btn-primary btn-lg"
               style="padding-left: 2.5rem; padding-right: 2.5rem;" (click)="signin()">Login</button>
             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a routerLink="/createaccount"
                 class="link-danger">Register</a></p>
@@ -58,7 +58,7 @@
   </div>
 
 
-  <!-- Button trigger modal -->
+ 
 
 
 <!-- Modal -->
@@ -66,7 +66,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Reset Password</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">Forgot Password</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
